src/views/snapshots/r#gen__views__gen_graph_widget__tests__annotated_full_detail.snap
---
source: src/views/gen_graph_widget.rs
expression: terminal.backend().to_string()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ╟──ACGTACGTACGTACGTACGTACGTACGTAC─────────ACGTACGTACGT─────────────────ACGTACGTACGTACGTACGTACGTACG"
"         ════════AmpR═══════▶ ◀ori═         ════lacZ════                 ════▶                tag ◀═"
"                         ══════════  promoter ═══▶               terminator_region ══════════       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
