src/views/snapshots/r#gen__views__gen_graph_widget__tests__complex_dag_zoom_1.snap
---
source: src/views/gen_graph_widget.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"         ╭────TTAC───╮                                                                                                  "
"    ╭─CG─┴─╮       ╭─┴─CCGTAAGCT──╮                                                                                     "
"  A─┤      ├─ACGTA─┤              ├─ACGTTG.CGTAGC──GCTAAC.CATGTA                                                        "
"    ╰─GAT─┬╯       ╰┬─TTAACCGGATC─╯                                                                                     "
"          ╰─GATTACA─╯                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
