src/views/snapshots/r#gen__views__gen_graph_widget__tests__gfa_cycle_with_path.snap
---
source: src/views/gen_graph_widget.rs
expression: snapshot
---
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"      GGG──ACT──CTA──AAA──CCC─┬─╢                                                                                                   "
"       │                      ╰╮                                                                                                    "
"  ╟─┬─TTT─────────────◀────────╯                                                                                                    "
"   ╭╯                                                                                                                               "
"   ╰──────────────╴                                                                                                                 "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
